adding new files

--- a/css2/main1.css
+++ b/css2/main1.css
@@ -129,7 +129,7 @@ nav {
 	height:60px;
 	width:60px; 
 	position:absolute;  
-	background-image: url("../img/1234.jpg") ;
+	background-image: url("../img/1234.JPG") ;
 	background-repeat: no-repeat;
 	
 	
